-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2, 6.5.3, 6.6.0
-
None
-
macOS <unknown version, will update when I have>, Ubuntu 23.04
Qt6.6 for most testing.
-
-
bbeff2a33 (dev), fd242e8ce (6.6), c02f8b9d4 (dev), c93ab8c2a (dev), 6e367fbb3 (6.6), b65e1141d (6.6), 2c96f5177 (dev), de5925b15 (6.6), 17372faf3 (dev), 66faeb99f (tqtc/lts-6.5), e6d85cf28 (dev), 320010bef (tqtc/lts-6.5), 7b3cf6177 (tqtc/lts-6.5)
Given a QMainWindow with two tabbed QDockWidgets, if you follow these steps, in step 3, an extra window is created, and after all steps, you will have an app with no windows, and no way to shut the app down:
- Undock the tabbed dock widget group outside the main window to its own floating window, showing both tabs. The main window shows, but with no content.
- Undock one of the tabbed widgets from the floating window.
- Observe that a new empty redundant window is created. You may need to drag the window aside to see the other QDockWidget in it's own floating window.
At this point you will have 4 windows - the QMainWindow instance, one each of the two dock widgets, and this mystery empty window. - Now try to shut down the application from the application file menu.
- Observe that the application never terminates.
Note:
The redundant floating window is close-able but despite closing all of the windows, app shutdown is blocked. The user needs to manually force quit the application from activity monitor to quit the application.
The app asserts in debug mode when we try to dock any of the tabbed widgets into the redundant floating window. (separate bug will be created for this and linked to this issue).
Minimal reproducer app , Recording
and stack trace
attached.
- is duplicated by
-
QTBUG-118223 QDockWidget generates leftover containers + crash
-
- Closed
-
-
QTBUG-118579 Undocking tabbed widget from main window onto the floating window crashes app
-
- Closed
-
- relates to
-
QTBUG-99136 QDockWidget not correctly parented/setup if dragged from another floating and tabified QDockWidget
-
- Closed
-
-
QTBUG-118579 Undocking tabbed widget from main window onto the floating window crashes app
-
- Closed
-
For Gerrit Dashboard: QTBUG-118578 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
516555,6 | Extend qDebug functionality for QDockWidget | dev | qt/qtbase | Status: MERGED | +2 | 0 |
516775,3 | WIP QMainWindowLayout: Add diagnostic output | dev | qt/qtbase | Status: ABANDONED | -2 | 0 |
516825,2 | Extend qDebug functionality for QDockWidget | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
516877,4 | QDockWidget: Remove "group" bool trap | dev | qt/qtbase | Status: MERGED | +2 | 0 |
516878,51 | QDockWidget: Fix group unplugging | dev | qt/qtbase | Status: MERGED | -1 | 0 |
517010,3 | Fully export QDockWidget debug operator | dev | qt/qtbase | Status: MERGED | +2 | 0 |
517102,2 | Fully export QDockWidget debug operator | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
517111,2 | QDockWidget: Remove "group" bool trap | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
517275,6 | QDockWidget: Remove "group" bool trap | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
518578,2 | QDockAreaLayout: implement widget based add() and remove() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
518593,5 | Remove bool trap in QDockWidgetPrivate::endDrag() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
518770,2 | QDockAreaLayout: implement widget based add() and remove() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
519415,2 | QDockAreaLayout: implement widget based add() and remove() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
519508,1 | Remove bool trap in QDockWidgetPrivate::endDrag() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
519600,5 | QDockWidget: Fix group unplugging | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
520573,5 | QDockWidget: Fix group unplugging | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
521307,2 | Remove bool trap in QDockWidgetPrivate::endDrag() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |