src/widgets/widgets/qdockwidget.cpp
@@ -1802,6 +1802,27 @@ QWidget *QDockWidget::titleBarWidget() const
     return layout->widgetForRole(QDockWidgetLayout::TitleBar);
 }
 
+#ifndef QT_NO_DEBUG_STREAM
+QDebug operator<<(QDebug dbg, const QDockWidget *dockWidget)
+{
+    QDebugStateSaver saver(dbg);
+    dbg.nospace();
+    return dockWidget ? dbg << *dockWidget : dbg << "QDockWidget(0x0)";
+}
+
+QDebug operator<<(QDebug dbg, const QDockWidget &dockWidget)
+{
+    QDebugStateSaver saver(dbg);
+    dbg.nospace();
+    dbg << "QDockWidget(" << static_cast<const void *>(&dockWidget);
+    dbg << "->(ObjectName=" << dockWidget.objectName();
+    dbg << "; floating=" << dockWidget.isFloating();
+    dbg << "; features=" << dockWidget.features();
+    dbg << ";))";
+    return dbg;
+}
+#endif // QT_NO_DEBUG_STREAM
+
 QT_END_NAMESPACE
 
 #include "qdockwidget.moc"
