src/widgets/widgets/qdockwidget.h
@@ -64,6 +64,11 @@ public:
     inline bool isAreaAllowed(Qt::DockWidgetArea area) const
     { return (allowedAreas() & area) == area; }
 
+#ifndef QT_NO_DEBUG_STREAM
+    friend Q_AUTOTEST_EXPORT QDebug operator<<(QDebug dbg, const QDockWidget &dockWidget);
+    friend Q_AUTOTEST_EXPORT QDebug operator<<(QDebug dbg, const QDockWidget *dockWidget);
+#endif
+
 #ifndef QT_NO_ACTION
     QAction *toggleViewAction() const;
 #endif
