src/widgets/widgets/qmainwindowlayout_p.h
@@ -326,6 +326,7 @@ public:
     void updateCurrentGapRect();
     void restore();
     void apply();
+    QList<QDockWidget *> dockWidgets() const { return findChildren<QDockWidget *>(); }
 
     QRect currentGapRect;
     QList<int> currentGapPos;
